--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Alikhan Azanbayev - Resume</title>
     <style>
-        /* Root Variables for Theming */
         :root {
-            /* Light Theme (Default) */
             --bg-primary: #f8f9fa;
             --bg-secondary: #ffffff;
             --text-primary: #333333;
@@ -21,7 +19,6 @@
             --transition-speed: 0.4s;
         }
 
-        /* Dark Theme */
         [data-theme="dark"] {
             --bg-primary: #121212;
             --bg-secondary: #1e1e1e;
@@ -35,7 +32,6 @@
             --timeline-color: #4d7aff;
         }
 
-        /* Reset and Global Styles with Animation Defaults */
         * {
             margin: 0;
             padding: 0;
@@ -60,7 +56,6 @@
             padding: 20px;
         }
 
-        /* Card/Section Styling */
         section {
             margin-bottom: 30px;
             background-color: var(--bg-secondary);
@@ -77,7 +72,6 @@
             box-shadow: 0 14px 40px rgba(0, 0, 0, 0.12);
         }
 
-        /* Headings */
         h1, h2, h3 {
             color: var(--accent-color);
         }
@@ -164,7 +158,6 @@
             width: 100%;
         }
 
-        /* Header Styles */
         header {
             text-align: center;
             padding: 50px 0;
@@ -258,7 +251,6 @@
             width: 0;
         }
 
-        /* Contact Info */
         .contact-info {
             display: flex;
             flex-wrap: wrap;
@@ -294,7 +286,6 @@
             font-size: 1.2rem;
         }
 
-        /* Experience and Education */
         .timeline-item {
             margin-bottom: 35px;
             position: relative;
@@ -336,7 +327,6 @@
             margin-bottom: 8px;
         }
 
-        /* Skills */
         .skills-container {
             display: flex;
             flex-wrap: wrap;
@@ -360,7 +350,6 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
-        /* Projects */
         .project {
             margin-bottom: 30px;
             padding-bottom: 20px;
@@ -378,14 +367,12 @@
             color: var(--accent-hover);
         }
 
-        /* Two Column Layout */
         .two-column {
             display: flex;
             flex-direction: column;
             gap: 30px;
         }
 
-        /* Footer */
         footer {
             text-align: center;
             padding: 30px 0;
@@ -394,7 +381,6 @@
             margin-top: 20px;
         }
 
-        /* Animation keyframes */
         @keyframes fadeInUp {
             to {
                 opacity: 1;
@@ -402,7 +388,6 @@
             }
         }
 
-        /* Animation delays for staggered entrance */
         section:nth-child(1) { animation-delay: 0.1s; }
         section:nth-child(2) { animation-delay: 0.2s; }
         section:nth-child(3) { animation-delay: 0.3s; }
@@ -413,14 +398,12 @@
         .timeline-item:nth-child(2) { animation-delay: 0.4s; }
         .timeline-item:nth-child(3) { animation-delay: 0.6s; }
 
-        /* Apply animations to sections */
         section {
             animation: fadeInUp 0.5s ease forwards;
             opacity: 0;
             transform: translateY(20px);
         }
 
-        /* Media Queries */
         @media (min-width: 768px) {
             .two-column {
                 flex-direction: row;
@@ -657,7 +640,6 @@
         }
     }
 
-    // Animate elements when they come into view
     document.addEventListener('DOMContentLoaded', function() {
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
