--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alikhan Azanbayev - Resume</title>
+    <title>Your Name - Resume</title>
     <style>
+        /* Root Variables for Theming */
         :root {
+            /* Light Theme (Default) */
             --bg-primary: #f8f9fa;
             --bg-secondary: #ffffff;
             --text-primary: #333333;
@@ -19,6 +21,7 @@
             --transition-speed: 0.4s;
         }
 
+        /* Dark Theme */
         [data-theme="dark"] {
             --bg-primary: #121212;
             --bg-secondary: #1e1e1e;
@@ -32,6 +35,7 @@
             --timeline-color: #4d7aff;
         }
 
+        /* Reset and Global Styles with Animation Defaults */
         * {
             margin: 0;
             padding: 0;
@@ -56,6 +60,7 @@
             padding: 20px;
         }
 
+        /* Card/Section Styling */
         section {
             margin-bottom: 30px;
             background-color: var(--bg-secondary);
@@ -72,6 +77,7 @@
             box-shadow: 0 14px 40px rgba(0, 0, 0, 0.12);
         }
 
+        /* Headings */
         h1, h2, h3 {
             color: var(--accent-color);
         }
@@ -158,6 +164,7 @@
             width: 100%;
         }
 
+        /* Header Styles */
         header {
             text-align: center;
             padding: 50px 0;
@@ -251,6 +258,7 @@
             width: 0;
         }
 
+        /* Contact Info */
         .contact-info {
             display: flex;
             flex-wrap: wrap;
@@ -286,6 +294,7 @@
             font-size: 1.2rem;
         }
 
+        /* Experience and Education */
         .timeline-item {
             margin-bottom: 35px;
             position: relative;
@@ -327,6 +336,7 @@
             margin-bottom: 8px;
         }
 
+        /* Skills */
         .skills-container {
             display: flex;
             flex-wrap: wrap;
@@ -350,6 +360,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
+        /* Projects */
         .project {
             margin-bottom: 30px;
             padding-bottom: 20px;
@@ -367,12 +378,14 @@
             color: var(--accent-hover);
         }
 
+        /* Two Column Layout */
         .two-column {
             display: flex;
             flex-direction: column;
             gap: 30px;
         }
 
+        /* Footer */
         footer {
             text-align: center;
             padding: 30px 0;
@@ -381,6 +394,7 @@
             margin-top: 20px;
         }
 
+        /* Animation keyframes */
         @keyframes fadeInUp {
             to {
                 opacity: 1;
@@ -388,6 +402,7 @@
             }
         }
 
+        /* Animation delays for staggered entrance */
         section:nth-child(1) { animation-delay: 0.1s; }
         section:nth-child(2) { animation-delay: 0.2s; }
         section:nth-child(3) { animation-delay: 0.3s; }
@@ -398,12 +413,14 @@
         .timeline-item:nth-child(2) { animation-delay: 0.4s; }
         .timeline-item:nth-child(3) { animation-delay: 0.6s; }
 
+        /* Apply animations to sections */
         section {
             animation: fadeInUp 0.5s ease forwards;
             opacity: 0;
             transform: translateY(20px);
         }
 
+        /* Media Queries */
         @media (min-width: 768px) {
             .two-column {
                 flex-direction: row;
@@ -545,6 +562,12 @@
                     <p>Application that sends HTTP requests to APIs like Postman. It uses fyne for the ui and native http library to send requests.</p>
                     <p><a href="https://github.com/KfcEnjoyer/GoRestApi" target="_blank">View Project</a></p>
                 </div>
+                <div class="project">
+                <h3>TermChat</h3>
+                <p class="date">2025</p>
+                <p>A lightweight, real-time terminal-based messaging system built in Go using net/rpc. Features include direct messaging, global chat, private rooms, and user management.</p>
+                <p><a href="https://github.com/YourUsername/termchat" target="_blank">View Project</a></p>
+                </div>
             </section>
         </div>
 
@@ -640,6 +663,7 @@
         }
     }
 
+    // Animate elements when they come into view
     document.addEventListener('DOMContentLoaded', function() {
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
