--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
                     <p class="company">Prog Kids</p>
                     <p class="date">September 2022 - March 2023</p>
                     <ul>
-                        <li>Helped many students step foot into the programming world</li>
-                        <li>Tutored students world wide</li>
-                        <li>Achieved and surpassed individual goals</li>
+                        <li>Tutored students world-wide</li>
+                        <li>Maintained individual conversion rate of 60%</li>
+                        <li>Did the impossible and successfully sold the courses whilst not speaking the student's language</li>
                     </ul>
                 </div>
 
