--- a/index.html
+++ b/index.html
@@ -487,7 +487,11 @@
 
     <section id="summary">
         <h2>Professional Summary</h2>
-        <p>Software developer with a cybersecurity educational foundation and hands-on engineering experience in the logistics sector. Passionate about backend development while maintaining a personal enthusiasm for PC building and hardware. Guided by core values of honesty and freedom, I bring a unique perspective shaped by my journey from Kazakhstan to the United States, along with a genuine dedication to creating reliable and efficient technological solutions.</p>
+        <p>Software developer with a cybersecurity educational foundation and hands-on experience in software development. My values are oriented toward solving problems of the team, business, and clients in order of priority.
+I have a strong technical background, strive to develop the team, and ensure product stability.
+I also aim for the earliest possible detection of errors in the project, for which I apply tools most appropriate to each specific situation.
+I have extensive experience working on tasks to improve performance and stabilize the product.
+You can write to me directly on Telegram: @azanbay</p>
     </section>
 
     <div class="two-column">
