--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Alikhan Azanbayev - Resume</title>
     <style>
         :root {
             --bg-primary: #f8f9fa;
@@ -488,7 +488,7 @@
     <section id="summary">
         <h2>Professional Summary</h2>
         <p>Software developer with a cybersecurity educational foundation and hands-on experience in software development. My values are oriented toward solving problems of the team, business, and clients in order of priority.
-I have a strong technical background, strive to develop the team, and ensure product stability.
+<br>I have a strong technical background, strive to develop the team, and ensure product stability.
 I also aim for the earliest possible detection of errors in the project, for which I apply tools most appropriate to each specific situation.
 I have extensive experience working on tasks to improve performance and stabilize the product.
 You can write to me directly on Telegram: @azanbay</p>
