--- a/index.html
+++ b/index.html
@@ -669,6 +669,12 @@ You can write to me directly on Telegram: @azanbay</p>
                 <p>A lightweight, real-time terminal-based messaging system built in Go using net/rpc. Features include direct messaging, global chat, private rooms, and user management.</p>
                 <p><a href="https://github.com/KfcEnjoyer/terminal-messaging" target="_blank">GitHub page</a></p>
                 </div>
+                <div class="project">
+                <h3>Log aggregator</h3>
+                <p class="date">2025</p>
+                <p>Log aggregation service built with Go, PostgreSQL, and Kafka. Collects, processes, and stores system logs from various sources with role-based access control. The system is fully containerized with Docker for seamless deployment and includes authentication functionality for secure access.</p>
+                <p><a href="https://github.com/KfcEnjoyer/log-aggregator" target="_blank">GitHub page</a></p>
+                </div>
             </section>
         </div>
 
@@ -700,7 +706,7 @@ You can write to me directly on Telegram: @azanbay</p>
                     <span class="skill">Problem Solving</span>
                     <span class="skill">Critical thinking</span>
                     <span class="skill">Back End</span>
-                    <span class="skill">Golang</span>
+                    <span class="skill">Go</span>
                     <span class="skill">Python</span>
                     <span class="skill">Java</span>
                     <span class="skill">REST</span>
@@ -709,8 +715,10 @@ You can write to me directly on Telegram: @azanbay</p>
                     <span class="skill">Reactjs</span>
                     <span class="skill">Nodejs</span>
                     <span class="skill">Apache Kafka</span>
-                    <span class="skill">Apache Kafka</span>
+                    <span class="skill">Docker</span>
+                    <span class="skill">Blockchain</span>
                     <span class="skill">Distributed Computing</span>
+                    <span class="skill">AWS</span>
                 </div>
             </section>
 
